--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -4,7 +4,10 @@
   <%= f.label :title %>
   <%= f.text_field :title %>
   <br />
-
+  <%= f.text_field :artist_name %>
+  <%= f.collection_select :genre_id, Genre.all, :id, :name %>
+  <input type="text" name="song[notes][]" id="song_notes_1">
+  <input type="text" name="song[notes][]" id="song_notes_2">
   <%= f.submit %>
 <% end %>
 
