--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,3 +1,13 @@
-<h1>Songs#show</h1>
+<h1>Songs</h1>
 
 Title: <%= @song.title %>
+<br><br>
+Artist: <%= @song.artist_name %>
+<br><br>
+Genre: <%= @song.genre_name %>
+<br><br>
+Notes:
+<br><br>
+<% @notes.each do|note| %>
+<li><%= note.content %></li>
+<% end %>
