--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -4,8 +4,18 @@
   <%= f.label :title %>
   <%= f.text_field :title %>
   <br />
+  <%= f.label :artist_name %>
+  <%= f.text_field :artist_name %>
+  <br />
+  <%= f.collection_select :genre_id, Genre.all, :id, :name %>
+  <br />
+  <%= f.label :song_note_contents %>
+  <input id ="song_notes_1" name="song[note_contents][]">
+  <input id ="song_notes_2" name="song[note_contents][]">
+  <input id ="song_notes_3" name="song[note_contents][]">
+  <input id ="song_notes_4" name="song[note_contents][]">
+
+  <br />
 
   <%= f.submit %>
 <% end %>
-
-
