--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -4,8 +4,20 @@
   <%= f.label :title %>
   <%= f.text_field :title %>
   <br />
+  <%= f.label :artist_name %>
+  <%= f.text_field :artist_name %>
+  <br />
+  <%= f.text_field :genre_name, list: "genres_autocomplete" %>
+  <datalist id="genres_autocomplete">
+    <% Genre.all.each do |genre| %>
+      <option value="<%= genre.name %>">
+    <% end %>
+  </datalist>
+  <br />
+  <%= f.label :note_contents %>
+  <%= f.text_field :note_contents %>
+  <br />
+
 
   <%= f.submit %>
 <% end %>
-
-
